crates/dollet-server/src/api/snapshots/dollet__api__tests__shape-notifications-count.snap
---
source: crates/dollet-server/src/api/tests.rs
expression: /api/notifications/count/
---
unacknowledged: number
