crates/dollet-server/src/api/snapshots/dollet__api__tests__shape-patch-channel.snap
---
source: crates/dollet-server/src/api/tests.rs
expression: /api/channels/channels/1001/
---
auto_created: bool
catchup_days: number
channel_group_id: number
channel_number: number
effective_channel_number: number
effective_epg_data_id: number
effective_name: string
effective_stream_profile_id: number
effective_tvc_guide_stationid: string
effective_tvg_id: string
epg_data_id: number
epg_name: string
group_name: string
hidden_from_output: bool
id: number
is_adult: bool
is_catchup: bool
logo_id: number
logo_url: string
name: string
override.channel_group_id: number
override.channel_number: number
override.epg_data_id: number
override.logo_id: number
override.name: string
override.stream_profile_id: number
override.tvc_guide_stationid: string
override.tvg_id: string
stream_profile_id: number
streams[]: number
tvc_guide_stationid: string
tvg_id: string
user_level: number
uuid: string
