crates/dollet-server/src/api/snapshots/dollet__api__tests__shape-session.snap
---
source: crates/dollet-server/src/api/tests.rs
expression: shape
---
[].buffer.bytes: number
[].buffer.chunks: number
[].buffer.head: number
[].buffer.oldest: number
[].buffer.seconds: number
[].channel: string
[].clients[].bytes_sent: number
[].clients[].connected_at: string
[].clients[].id: string
[].clients[].internal: bool
[].clients[].ip: null|string
[].clients[].user_agent: null|string
[].healthy: bool
[].last_error: string
[].media.audio_bitrate_kbps: number
[].media.audio_channels: string
[].media.audio_codec: string
[].media.height: number
[].media.input_format: string
[].media.pixel_format: string
[].media.quality: string
[].media.sample_rate: number
[].media.source_fps: number
[].media.video_bitrate_kbps: number
[].media.video_codec: string
[].media.width: number
[].now_playing.description: string
[].now_playing.duration_seconds: number
[].now_playing.elapsed_seconds: number
[].now_playing.remaining_seconds: number
[].now_playing.start: string
[].now_playing.state: string
[].now_playing.stop: string
[].now_playing.sub_title: string
[].now_playing.title: string
[].output.kind: string
[].output.profile_id: number
[].phase: string
[].progress.actual_fps: number
[].progress.bitrate_kbps: number
[].progress.fps: number
[].progress.speed: number
[].source_id: number
[].source_index: number
[].started_at: string
[].switches: number
[].total_bytes: number
[].url: string
